error12.txt
Traceback (most recent call last):
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\smartif.py", line 181, in translate_token
    op = OPERATORS[token]
         ~~~~~~~~~^^^^^^^
KeyError: "current_filters.type=='house'"

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<string>", line 3, in <module>
    render_to_string('properties.html')
    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\engine.py", line 186, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\base.py", line 157, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\base.py", line 199, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\loader_tags.py", line 307, in do_extends
    nodelist = parser.parse()
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\loader_tags.py", line 235, in do_block
    nodelist = parser.parse(("endblock",))
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\defaulttags.py", line 993, in do_if
    condition = TemplateIfParser(parser, bits).parse()
                ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\defaulttags.py", line 926, in __init__
    super().__init__(*args, **kwargs)
    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\smartif.py", line 172, in __init__
    mapped_tokens.append(self.translate_token(token))
                         ~~~~~~~~~~~~~~~~~~~~^^^^^^^
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\smartif.py", line 183, in translate_token
    return self.create_var(token)
           ~~~~~~~~~~~~~~~^^^^^^^
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\defaulttags.py", line 929, in create_var
    return TemplateLiteral(self.template_parser.compile_filter(value), value)
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\base.py", line 676, in compile_filter
    return FilterExpression(token, self)
  File "C:\Users\ADMIN\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\django\template\base.py", line 776, in __init__
    raise TemplateSyntaxError(
    ...<2 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Template: C:\project2\main_project2\templates\properties.html, Could not parse the remainder: '=='house'' from 'current_filters.type=='house''
